大更新，加入胜负结算界面、选关界面，增加暂停功能，重新绘制背景图、植物卡片图，修复向日葵生成阳光动画无法正常显示的问题

--- a/pvz.vcxproj
+++ b/pvz.vcxproj
@@ -139,6 +139,10 @@
     <ClInclude Include="CardSlot.h" />
     <ClInclude Include="Constant.h" />
     <ClInclude Include="GameScene.h" />
+    <ClInclude Include="LawnMower.h" />
+    <ClInclude Include="LawnMowerLayer.h" />
+    <ClInclude Include="Level.h" />
+    <ClInclude Include="LevelScene.h" />
     <ClInclude Include="MenuScene.h" />
     <ClInclude Include="Object.h" />
     <ClInclude Include="Plants.h" />
@@ -153,6 +157,10 @@
     <ClInclude Include="Transparent.h" />
     <ClInclude Include="Zombies.h" />
     <ClInclude Include="ZombiesLayer.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Font Include="IPix.ttf" />
+    <Font Include="PixCon.ttf" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
